Mon Feb 26 05:27:52 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/net/telnet.rb: #telnetmode(), #binmode(): bug fix.
	  thanks to nobu.nakada@nifty.ne.jp.

Mon Feb 26 04:55:50 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/cgi.rb: CGI#form(): bug fix.
	  thanks to MoonWolf <moonwolf@moonwolf.com>.

	* lib/cgi.rb: CGI#rfc1123_date(): improvement.
	  thanks to Tomoyasu Akita <genzo-@dm4lab.to>.

	* lib/cgi.rb: CGI#header(): improvement for mod_ruby.
	  thanks to Shugo Maeda <shugo@ruby-lang.org>.

Sun Feb 25 02:45:30 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* file.c (rb_file_s_rename): avoid Cygwin's bug.

Sat Feb 24 22:14:00 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/win32.c (myrename): fix error handling.

Sat Feb 24 15:43:31 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb: use net 1.2 for also ruby 1.6 branch.

	* lib/net/smtp.rb: ditto.

	* lib/net/pop.rb: ditto.

	* lib/net/http.rb: ditto.

Fri Feb 23 16:36:09 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/http.rb: always close connection if body is not exist.

Fri Feb 23 13:27:05 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/http.rb: keep-alive detection was incomplete.

Fri Feb 23 08:24:53 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb: clear read buffer after reopen.

	* lib/net/http.rb: update RD document.

Tue Feb 20 16:37:58 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big2long): should not raise RangeError for Bignum
	  LONG_MIN value.

Mon Feb 19 17:46:37 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_substr): "a"[1,2] should return ""; need
	  rubicon upgrade.

Mon Feb 19 01:55:43 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (secure_visibility): visibility check for untainted modules.

Mon Feb 19 00:29:29 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* signal.c (sigpipe): sighandler which does nothing.
