@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.3"
-#define RUBY_RELEASE_DATE "2001-02-24"
+#define RUBY_RELEASE_DATE "2001-02-26"
 #define RUBY_VERSION_CODE 163
-#define RUBY_RELEASE_CODE 20010224
+#define RUBY_RELEASE_CODE 20010226
