@@ -1,3 +1,8 @@
+Mon Feb 26 00:04:52 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* eval.c (proc_call): should not modify ruby_block->frame.iter
+	  based on ruby_frame->iter altered by PUSH_ITER().
+
 Mon Feb 26 05:27:52 2001  Wakou Aoyama  <wakou@fsinet.or.jp>
 
 	* lib/net/telnet.rb: #telnetmode(), #binmode(): bug fix.
@@ -17,6 +22,11 @@ Mon Feb 26 04:55:50 2001  Wakou Aoyama  <wakou@fsinet.or.jp>
 Sun Feb 25 02:45:30 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* file.c (rb_file_s_rename): avoid Cygwin's bug.
+
+Sat Feb 24 23:32:55 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* eval.c (rb_thread_fd_close): should save current context before
+	  raising exception.
 
 Sat Feb 24 22:14:00 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
 
